--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,6 +2,13 @@
 @use './_colors';
 
 @font-face {
+  font-family: 'Lato-Regular';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../assets/fonts/Lato-Regular.ttf') format('truetype');
+}
+
+@font-face {
   font-family: 'MGSans';
   font-style: normal;
   font-weight: 400;
@@ -56,9 +63,10 @@ body {
   box-sizing: border-box;
   min-height: 100vh;
   min-width: 100vw;
-  color: colors.$primary-text_color;
-  border: colors.$background-color;
-  font-family: 'MGSans', sans-serif;
+  color: var(--fg);
+  background-color: var(--bg);
+  border: var(--bg);
+  font-family: 'Lato-Regular', sans-serif;
   font-style: normal;
   font-size: 1.6rem;
   overflow-x: hidden;
