Created a generic modal dialog and a message dialog.

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -3,6 +3,9 @@
 :root {
     --bg: #ffffff;
     --fg: #000000;
+    --dialog-red: #b91c1c;
+    --dialog-purple: #6d28d9;
+    --dialog-purple-hover: #4c1d95;
 }
 
 :root.dark {
