--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -43,3 +43,44 @@
 
 $hyperlink-active-color: rgba(color.scale(blue, $lightness: 30%), 0.8);
 $hyperlink-color: rgba(color.scale(blue, $lightness: 20%), 1);
+
+.color-accent-yellow {
+    color: var(--accent-yellow);
+}
+.color-accent-yellow-contrast {
+    color: var(--accent-yellow-contrast);
+}
+.color-accent-yellow-strong {
+    color: var(--accent-yellow-strong);
+}
+
+.color-accent-green {
+    color: var(--accent-green);
+}
+.color-accent-green-contrast {
+    color: var(--accent-green-contrast);
+}
+
+.color-accent-green-strong {
+    color: var(--accent-green-strong);
+}
+
+.color-accent-red {
+    color: var(--accent-red);
+}
+.color-accent-red-contrast {
+    color: var(--accent-red-contrast);
+}
+.color-accent-red-strong {
+    color: var(--accent-red-strong);
+}
+
+.color-accent-purple {
+    color: var(--accent-purple);
+}
+.color-accent-purple-contrast {
+    color: var(--accent-purple-contrast);
+}
+.color-accent-purple-strong {
+    color: var(--accent-purple-strong);
+}
