Filling out PPs.

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -88,3 +88,8 @@ a:active {
 .use-mgsans {
   font-family: 'MGSans', sans-serif;
 }
+
+.use-superscript {
+  font-size: 1rem;
+  vertical-align: super;
+}
