Only displaying the alternate comment line if it starts with 'Claimed'.

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -19,7 +19,8 @@
     --accent-yellow: #f5c242;
     --accent-green: #22c55e;
     --accent-red: #ef4444;
-    --accent-purple: #bba2ff;   
+    --accent-purple: #bba2ff; 
+    --label: #3584e4;
 }
 
 $hyperlink-active-color: rgba(color.scale(blue, $lightness: 30%), 0.8);
@@ -39,4 +40,8 @@ $hyperlink-color: rgba(color.scale(blue, $lightness: 20%), 1);
 
 .color-accent-purple {
     color: var(--accent-purple);
+}
+
+.color-label {
+    color: var(--label);
 }
