--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -15,12 +15,20 @@
     font-size: 2rem;
 }
 
+.font-super-large {
+    font-size: 5rem;
+}
+
 
 .print-view {
     font-size: 1.2rem !important;
 
     & .font-large {
         font-size: 1.4rem;
+    }
+
+    & .font-super-large {
+        font-size: 3rem;
     }
 }
 
