Lots of printout styling changes.

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -41,6 +41,7 @@
     --accent-green: black;
     --accent-red: black;
     --accent-purple: black;
+    --ubuntu-blue: black;
 }
 
 $hyperlink-active-color: rgba(color.scale(blue, $lightness: 30%), 0.8);
