--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -34,6 +34,25 @@
     & .font-super-large {
         font-size: 3rem;
     }
+
+    & .race-details.horizontal-rule {
+        margin-bottom: 0;
+        transform: translateY(-0.1rem);
+    }
+
+    & .race-details-panel.print {
+        padding-bottom: 0.25rem;
+    }
+
+    & .horse-panel.print.panel {
+        padding-top: 0.5rem !important;
+    }
+
+    & .horse .horizontal-rule {
+        margin-top: -0.5rem;
+        margin-bottom: 0.5rem;
+        transform: translateY(0);
+    }
 }
 
 .horizontal-rule {
@@ -42,4 +61,3 @@
     margin-bottom: 0.5rem;
     transform: translateY(-1rem);
 }
-
