--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -30,6 +30,7 @@
 
 .print-view {
     font-size: 1.4rem !important;
+    line-height: 1.0 !important;
 
     & .font-small {
         font-size: 1.2rem;
