--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,8 +2,7 @@
 @use './_colors';
 @use './layout';
 @use './typography';
-
-$print-root-size: 5pt;
+@use './print' as print;
 
 *,
 *::after,
@@ -42,12 +41,12 @@ html {
 }
 
 html.print-preview {
-  font-size: $print-root-size !important;
+  font-size: print.$print-root-size !important;
 }
 
 @media print {
   html {
-    font-size: $print-root-size !important;
+    font-size: print.$print-root-size !important;
   }
 }
 
